# blase

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  daily-log.md  dist.js
.github/workflows/: release.yml
crates/ast/: Cargo.toml  build.rs
crates/ast/src/: blade.rs  lib.rs  nodes.rs  php.rs
crates/blase/: Cargo.toml
crates/blase/src/: capabilities.rs  config.rs  db.rs  lib.rs  line_index.rs  loader.rs  lsp.rs  main.rs  resolve_path.rs  server.rs  util.rs
crates/blase/src/analysis/: completions.rs  diagnostics.rs  fixture.rs  goto_definition.rs  hover.rs  lsp.rs  mod.rs  references.rs  signature_help.rs  workspace_symbols.rs
crates/blase/src/analysis/completions/: item.rs  tests.rs
crates/blase/src/analysis/completions/tests/: components_and_layouts.rs  directives.rs  echo.rs
crates/blase/src/analysis/diagnostics/: tests.rs
crates/blase/src/analysis/goto_definition/: tests.rs
crates/blase/src/analysis/hover/: tests.rs
crates/blase/src/analysis/references/: tests.rs
crates/blase/src/analysis/workspace_symbols/: tests.rs
crates/blase/src/db/: def.rs  documentation.rs  text_edit.rs
crates/blase/src/db/def/: queries.rs
crates/blase/src/handler/: event.rs  mod.rs  notification.rs  request.rs
crates/blase/src/lsp/: from_proto.rs  into_proto.rs
crates/blase/tests/: handler_tests.rs
crates/macros/src/: lib.rs
crates/text-procs/: Cargo.toml
crates/text-procs/src/: lib.rs
editors/neovim/: blase.lua
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
editors/vscode/languages/: blade.tmLanguage.json
editors/vscode/src/: extension.ts
src/: config.rs  db.rs  document_data.rs  handler.rs  lib.rs  line_index.rs  loader.rs  lsp.rs  lsp_to_tree.rs  main.rs  server.rs  util.rs
src/analysis/: lsp.rs  mod.rs
src/handler/: mod.rs  notification.rs  request.rs
tests/: handler_tests.rs
