[package]
name = "blase"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.0"
tree-sitter = "0.26.3"
tree-sitter-blade = { path = "./crates/tree-sitter-blade" }
tokio = { version = "1.17.0", features = ["full"] }
line-index = "0.1.2"
memchr = "2.7.6"
anyhow = "1.0.100"
tower = { version = "0.5.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
futures = "0.3.31"
async-lsp = "0.2.2"
salsa = "0.26.0"
smol_str = "0.3.5"
dashmap = "6.1.0"
walkdir = "2.5.0"
tracing-appender = "0.2.4"
