[workspace]
resolver = "2"
members = [ "crates/*" ]

[workspace.dependencies]
# local crates
ast = { path = "./crates/ast" }
macros = { path = "./crates/macros" }
tree-sitter-blade = { path = "./crates/tree-sitter-blade" }
text-procs = { path = "./crates/text-procs/" }

# non-local crates
tracing = "0.1.44"
tracing-subscriber = "0.3.0"
tree-sitter = "0.25.10"
tokio = { version = "1.17.0", features = ["full"] }
line-index = "0.1.2"
memchr = "2.7.6"
anyhow = "1.0.100"
tower = { version = "0.5.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
futures = "0.3.31"
async-lsp = "0.2.2"
salsa = "0.26.0"
smol_str = "0.3.5"
dashmap = "6.1.0"
walkdir = "2.5.0"
tracing-appender = "0.2.4"
crossbeam-channel = "0.5.15"
tree-sitter-php = "0.24.2"
convert_case = "0.11.0"
camino = "1.2.2"
type-sitter = { version = "0.8.1", default-features = false }
type-sitter-gen = "0.8.1"
expect-test = "1.5.1"
itertools = "0.14.0"
cov-mark = "2.2.0"
