[package]
name = "blase"
version = "0.1.0"
edition = "2024"

[lints.clippy]
todo = "warn"
unimplemented = "warn"

[dependencies]
# local crates
ast.workspace = true
macros.workspace = true
text-procs.workspace = true

# non-local crates
tracing.workspace = true
tracing-subscriber.workspace = true
tree-sitter.workspace = true
tree-sitter-blade.workspace = true
tokio.workspace = true
line-index.workspace = true
memchr.workspace = true
anyhow.workspace = true
tower.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-lsp.workspace = true
salsa.workspace = true
smol_str.workspace = true
dashmap.workspace = true
walkdir.workspace = true
tracing-appender.workspace = true
crossbeam-channel.workspace = true
tree-sitter-php.workspace = true
convert_case.workspace = true
camino.workspace = true
type-sitter.workspace = true
expect-test.workspace = true
itertools.workspace = true
cov-mark.workspace = true
either.workspace = true
